2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.man:  Added documentation.

2005-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ntlm.tcl:  Use tcllib 1.8 des module. Added NTLM tests. Fix to
	* ntlm.test: work with tcl 8.2.

2005-09-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl: Fixed 8.4isms and specified requirement to Tcl 8.2

2005-04-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* saslclient.tcl: Moved example out of the module into a new
	  directory 'sasl/' under the examples tree.

2005-02-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.test:  Added some tests.
	* sasl.tcl:   Changed namespace and package to SASL.
	* ntlm.tcl:   

2005-01-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl: Initial version (DIGEST-MD5, CRAM-MD5, PLAIN, LOGIN)
	* ntlm.tcl: Implementation of Microsoft NTLM as SASL mechanism.
	* saslclient.tcl: SMTP-SASL test harness.
	